--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -11,4 +11,86 @@
         android:layout_centerInParent="true"
         android:textSize="32dp"/>
 
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="91dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="21dp"
+        android:text="Input Type:"
+        android:textSize="16sp" />
+
+    <Spinner
+        android:id="@+id/input_type_spinner"
+        android:layout_width="342dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="34dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="35dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:focusable="false"
+        android:minHeight="48dp"
+        android:spinnerMode="dropdown"></Spinner>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/input_type_spinner"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="21dp"
+        android:text="Activity Type:"
+        android:textSize="16sp" />
+
+    <Spinner
+        android:id="@+id/activity_type_spinner"
+        android:layout_width="342dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView1"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="center"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="33dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="5dp"
+        android:focusable="false"
+        android:minHeight="48dp"
+        android:spinnerMode="dropdown"></Spinner>
+
+    <Button
+        android:id="@+id/startBtn"
+        android:layout_width="196dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_type_spinner"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="291dp"
+        android:layout_marginEnd="109dp"
+        android:text="Start" />
+
+    <Button
+        android:id="@+id/syncBtn"
+        android:layout_width="202dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/activity_type_spinner"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="105dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="104dp"
+        android:text="Sync" />
+
 </RelativeLayout>
