--- a/app/src/main/res/layout/activity_manual_input.xml
+++ b/app/src/main/res/layout/activity_manual_input.xml
@@ -18,7 +18,27 @@
         app:layout_constraintTop_toTopOf="parent"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
-    <ListView
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="156dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="16dp"
+        android:text="Save"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/cancelButton"
+        android:layout_width="156dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="216dp"
+        android:layout_marginBottom="16dp"
+        android:text="Cancel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+        <ListView
         android:id="@+id/optionsListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +46,6 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toStartOf="@id/saveButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
