--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,14 +1,18 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.teeya_li.fragments.StartFragment">
+<!-- res/layout/fragment_settings.xml -->
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- Add your preferences here -->
+    <CheckBoxPreference
+        android:key="pref_key_enable_feature"
+        android:title="Enable Feature"
+        android:summary="Enable or disable a feature"
+        android:defaultValue="true"
+        />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text = "Settings"
-        android:layout_centerInParent="true"
-        android:textSize="32dp"/>
+    <EditTextPreference
+        android:key="pref_key_username"
+        android:title="Username"
+        android:summary="Enter your username"
+        />
 
-</RelativeLayout>
+    <!-- Add more preferences as needed -->
+</PreferenceScreen>
