--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -78,17 +78,17 @@
             android:layout_marginEnd="109dp"
             android:text="Start" />
 
-        <Button
-            android:id="@+id/syncBtn"
-            android:layout_width="202dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/activity_type_spinner"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="105dp"
-            android:layout_marginTop="100dp"
-            android:layout_marginEnd="104dp"
-            android:text="Sync" />
+<!--        <Button-->
+<!--            android:id="@+id/syncBtn"-->
+<!--            android:layout_width="202dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@+id/activity_type_spinner"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginStart="105dp"-->
+<!--            android:layout_marginTop="100dp"-->
+<!--            android:layout_marginEnd="104dp"-->
+<!--            android:text="Sync" />-->
 
     </RelativeLayout>
 
